@@ -124,7 +124,7 @@ public class SparqlConverter {
     if (countOnly) {
         mainEntity = query.getVariable();
       if (null != query.getInstanceOf() && null != query.getInstanceOf().get(0).getVariable())
-        mainEntity = query.getInstanceOf().get(0).getVariable();
+        mainEntity = query.getInstanceOf().getFirst().getVariable();
       selectQl.append("SELECT (count (distinct ?").append(mainEntity).append(") as ?count)");
     } else {
       selectQl.append("SELECT ");
@@ -251,7 +251,7 @@ public class SparqlConverter {
   }
 
   private String escape(String text) {
-    return text.replaceAll("[(\\-){}^\"\\/~\\\\]", " ").replaceAll("\\s+", " ").trim();
+    return text.replaceAll("[(\\-){}^\"/~\\\\]", " ").replaceAll("\\s+", " ").trim();
   }
 
   private void textSearch(StringBuilder whereQl) {
@@ -297,7 +297,7 @@ public class SparqlConverter {
       switch (match.getEntailment()){
         case descendantsOrSelfOf :
           o++;
-          whereQl.append("?").append(subject).append(" <").append(IM.IS_A).append("> ?").append(subject+o).append(".\n");
+          whereQl.append("?").append(subject).append(" <").append(IM.IS_A).append("> ?").append(subject).append(o).append(".\n");
           subject= subject+o;
           break;
         default :
@@ -381,7 +381,7 @@ public class SparqlConverter {
     if (match.getInstanceOf().size()==1) {
       o++;
       String object="instance"+o;
-      Node instance= match.getInstanceOf().get(0);
+      Node instance= match.getInstanceOf().getFirst();
       String inList = iriFromAlias(instance).replace(","," ");
       if (instance.getNodeRef() != null) {
         object = instance.getNodeRef();
@@ -590,8 +590,8 @@ public class SparqlConverter {
           o++;
           object = "o" + o;
         }
-        if (where.getIs() != null && where.getIs().get(0).getVariable() != null) {
-          object = where.getIs().get(0).getVariable();
+      if (where.getIs() != null && where.getIs().getFirst().getVariable() != null) {
+        object = where.getIs().getFirst().getVariable();
         }
 
         if (where.getIsNull()) {
